--- a/data_visualization.html
+++ b/data_visualization.html
@@ -51,12 +51,13 @@
                     Scene description <br><br>
                 </div>
                 <div>
-                    <svg height=300 width="100%" id="graph">
+                    <svg height=500 width="100%" id="graph">
                     </svg>
                 </div>
                 <div class=".text-center">
-                    <button type="button" class="btn btn-secondary btn-sm scene-btn" id="scene1_btn" data-scene-num="1">Scene 1</button>
-                    <button type="button" class="btn btn-secondary btn-sm scene-btn" id="scene2_btn" data-scene-num="2">Scene 2</button>
+                    <button type="button" class="btn btn-secondary btn-sm scene-btn" id="scene1_btn" data-scene-num="1">Overview</button>
+                    <button type="button" class="btn btn-secondary btn-sm scene-btn" id="scene2_btn" data-scene-num="2">Absolute values drilldown</button>
+                    <button type="button" class="btn btn-secondary btn-sm scene-btn" id="scene3_btn" data-scene-num="3">Relative values drilldown</button>
                 </div>
             </div>
         </div>
@@ -71,76 +72,82 @@
                 sceneNumber = $(this).data('scene-num');
 
             currentScene = sceneNumber;
-            console.log(currentScene);
-            $('.card-header').text(sceneTitle);
-
-            renderGraph(sceneNumber);
+            //console.log(currentScene);
+            //$('.card-header').text(sceneTitle);
+            renderScene(sceneNumber);
         });
 
-         function renderGraph(sceneNum) {
+        function renderScene(sceneNum) {
 
-             d3.select("svg").html('');
+            d3.select("svg").html('');
 
-             console.log('sceneNum = ' + sceneNum);
+            //console.log('sceneNum = ' + sceneNum);
+            
+            if (sceneNum == 1) {
+                $('.card-header').text("Overview");
+                createBubbleDiagram();
+            }
 
-             if (sceneNum == 1) {
-                 createBubbleDiagram();
-             }
+            if (sceneNum == 2) {
+                $('.card-header').text("Absolute values drilldown");
+                createBarChart();
+            }
 
-             if (sceneNum == 2) {
-                 createBarChart();
-             }
+            if (sceneNum == 3) {
+                $('.card-header').text("Relative values drilldown");
+                createBarChart();
+            }
+        }
+
+        function createBubbleDiagram() {
+            console.log("function start");
+
+            d3.csv('/data/overview_data.csv').then(function(data) {
+                console.log("data download done");
+
+                var margin = 30;
+
+                data.forEach(function(d) {
+                    d.RIncDiffP = parseFloat(d.RIncDiffP);
+                    d.PopDiffP = parseFloat(d.PopDiffP);
+                    d.Totpop = parseFloat(d.Totpop);
+                    //console.log(d.RIncDiffP);
+                });
+
+                var graph_width = parseInt(d3.select("svg").style("width").replace("px", ""));
+                var graph_height = parseInt(d3.select("svg").style("height").replace("px", ""));
+                //console.log(graph_width);
+                //console.log(graph_height);
+
+                var scaleX = d3.scaleLinear().domain([0.8, 1.6]).range([0, graph_width]);
+                var scaleY = d3.scaleLinear().domain([0.1, 2.2]).range([graph_height, 0]);
+                var scaleR = d3.scaleLog().domain([10, 100]).range([2, 20]).base(10);
+
+                d3.select("svg")
+                    .attr("width","100%")
+                    .attr("height",graph_height)
+                    .append("g").attr("transform", "translate(" + 50 + "," + 50 + ")")
+
+                    .selectAll()
+                    .data(data)
+                    .enter().append("circle")
+                    .attr("id", function(d) { return d.Country; })
+                    .attr("cx", function(d) { return scaleX(d.PopDiffP); })
+                    .attr("cy", function(d) { return scaleY(d.RIncDiffP); })
+                    .attr("r", function(d, i){return scaleR(d.Totpop);});
 
 
-         }
+                var xAxis = d3.axisBottom(scaleX).tickValues([0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5]).tickFormat(d3.format(".1f"));
+                var yAxis = d3.axisLeft(scaleY).tickValues([0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4]).tickFormat(d3.format(".1f"));
 
-        async function createBubbleDiagram() {
-            console.log("function start")
-            var data = await d3.csv('https://flunky.github.io/cars2017.csv');
-            console.log("data download done")
+                d3.select('svg').append('g')
+                    .attr('transform', "translate("+margin+","+5+")")
+                    .call(yAxis);
 
-            var margin = 50;
-            var width = 300;
-            var height = 300;
-
-            data.forEach(function(d) {
-                d.EngineCylinders = + d.EngineCylinders;
-                d.AverageCityMPG = + d.AverageCityMPG;
-                d.AverageHighwayMPG = + d.AverageHighwayMPG;
+                d3.select('svg').append('g')
+                    .attr('transform', "translate("+5+","+(graph_height-margin)+")")
+                    .call(xAxis);
             });
-
-            var graph_width = parseInt(d3.select("svg").style("width").replace("px", ""));
-            console.log(graph_width);
-
-            var scaleX = d3.scaleLog().domain([10, 150]).range([0, graph_width]).base(10);
-            var scaleY = d3.scaleLog().domain([10, 150]).range([200, 0]).base(10);
-
-            d3.select("svg")
-                .attr("width","100%")
-                .attr("height",height)
-                .append("g").attr("transform", "translate(" + 50 + "," + 50 + ")")
-
-                .selectAll()
-                .data(data)
-                .enter().append("circle")
-                .attr("cx", function(d) { return scaleX(d.AverageCityMPG); })
-                .on("click", function(d) {
-                    console.log(d);
-                })
-                .attr("cy", function(d) { return scaleY(d.AverageHighwayMPG); })
-                .attr("r", function(d, i){return 2 + d.EngineCylinders;});
-
-
-            var xAxis = d3.axisBottom(scaleX).tickValues([10, 20, 50, 100]).tickFormat(d3.format("~s"));
-            var yAxis = d3.axisLeft(scaleY).tickValues([10, 20, 50, 100]).tickFormat(d3.format("~s"));
-
-            d3.select('svg').append('g')
-                .attr('transform', "translate("+margin+","+margin+")")
-                .call(yAxis);
-
-            d3.select('svg').append('g')
-                .attr('transform', "translate("+margin+","+(height-margin)+")")
-                .call(xAxis);
         }
 
         function createBarChart(){
@@ -165,9 +172,9 @@
                     }
                 }
 
-                console.log(currentCountryData_array);
+                //console.log(currentCountryData_array);
 
-                console.log(Rrinc_max_array);
+                //console.log(Rrinc_max_array);
 
                 function getMaxOfArray(numArray) {
                     return Math.max.apply(null, numArray);
@@ -181,18 +188,18 @@
                 var data = Rrinc_max_array.map((value, index) => ({x: years[index], y: +value}));
                 console.log('data', data);
 
+                var width = parseInt(d3.select("svg").style("width").replace("px", ""));
+                var height = parseInt(d3.select("svg").style("height").replace("px", ""));
                 var margin = 50;
-                var width = 1000;
-                var height = 500;
-                var barWidth = 50;
+                var barWidth = width / 8;
 
                 var x = d3.scaleBand().domain(data.map(p => p.x)).range([0, width]);
                 var y = d3.scaleLinear().domain([0, total_Rrinc_max]).range([height, 0]);
                 var h = d3.scaleLinear().domain([0, total_Rrinc_max]).range([0, height]);
 
                 d3.select('svg')
-                    .attr("width",width+2*margin)
-                    .attr("height",height+2*margin)
+                    .attr("width","100%")
+                    .attr("height",height)
                     .append("g")
                     .attr("transform","translate("+margin+","+margin+")")
 
@@ -200,8 +207,8 @@
                     .data(data)
                     .enter().append("rect")
                     .attr("x", d => x(d.x) + x.bandwidth() / 2 - barWidth / 2)
-            .attr("y", d => height - h(d.y))
-            .attr("width", barWidth)
+                    .attr("y", d => height - h(d.y))
+                    .attr("width", barWidth)
                     .attr("height", d => h(d.y));
 
                 d3.select('svg').append('g')
@@ -209,13 +216,14 @@
                     .call(d3.axisLeft(y));
 
                 d3.select('svg').append('g')
-                    .attr('transform', "translate("+margin+","+(height+margin)+")")
+                    .attr('transform', "translate("+margin+","+(height-margin)+")")
                     .call(d3.axisBottom(x));
 
             });
         }
 
-        renderGraph(1);
+        renderScene(1);
+
     </script>
   </body>
 </html>
