--- a/data_visualization.html
+++ b/data_visualization.html
@@ -102,7 +102,7 @@
         function createBubbleDiagram() {
             console.log("function start");
 
-            d3.csv('/data/overview_data.csv').then(function(data) {
+            d3.csv('data/overview_data.csv').then(function(data) {
                 console.log("data download done");
 
                 var margin = 30;
