--- a/data_visualization.html
+++ b/data_visualization.html
@@ -100,12 +100,10 @@
         }
 
         function createBubbleDiagram() {
-            console.log("function start");
+            //console.log("function start");
 
             d3.csv('data/overview_data.csv').then(function(data) {
-                console.log("data download done");
-
-                var margin = 30;
+                //console.log("data download done");
 
                 data.forEach(function(d) {
                     d.RIncDiffP = parseFloat(d.RIncDiffP);
@@ -114,26 +112,25 @@
                     //console.log(d.RIncDiffP);
                 });
 
-                var graph_width = parseInt(d3.select("svg").style("width").replace("px", ""));
-                var graph_height = parseInt(d3.select("svg").style("height").replace("px", ""));
-                //console.log(graph_width);
-                //console.log(graph_height);
+                var margin = 30;
+                var graph_width = parseInt(d3.select("svg").style("width").replace("px", ""))-margin*2;
+                var graph_height = parseInt(d3.select("svg").style("height").replace("px", ""))-margin*2;
 
                 var scaleX = d3.scaleLinear().domain([0.8, 1.6]).range([0, graph_width]);
                 var scaleY = d3.scaleLinear().domain([0.1, 2.2]).range([graph_height, 0]);
                 var scaleR = d3.scaleLog().domain([10, 100]).range([2, 20]).base(10);
 
                 d3.select("svg")
-                    .attr("width","100%")
-                    .attr("height",graph_height)
+                    .attr("width", graph_width+margin*2)
+                    .attr("height",graph_height+margin*2)
                     .append("g").attr("transform", "translate(" + 50 + "," + 50 + ")")
 
                     .selectAll()
                     .data(data)
                     .enter().append("circle")
                     .attr("id", function(d) { return d.Country; })
-                    .attr("cx", function(d) { return scaleX(d.PopDiffP); })
-                    .attr("cy", function(d) { return scaleY(d.RIncDiffP); })
+                    .attr("cx", function(d) { return scaleX(d.PopDiffP);})
+                    .attr("cy", function(d) { return scaleY(d.RIncDiffP);})
                     .attr("r", function(d, i){return scaleR(d.Totpop);});
 
 
@@ -141,11 +138,11 @@
                 var yAxis = d3.axisLeft(scaleY).tickValues([0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4]).tickFormat(d3.format(".1f"));
 
                 d3.select('svg').append('g')
-                    .attr('transform', "translate("+margin+","+5+")")
+                    .attr('transform', "translate("+margin+","+10+")")
                     .call(yAxis);
 
                 d3.select('svg').append('g')
-                    .attr('transform', "translate("+5+","+(graph_height-margin)+")")
+                    .attr('transform', "translate("+margin+","+(graph_height+10)+")")
                     .call(xAxis);
             });
         }
