--- a/data_visualization.html
+++ b/data_visualization.html
@@ -160,11 +160,12 @@
                 return Math.max.apply(null, numArray);
             }
 
-            d3.csv("data/drilldown_rrinc.csv").then(function(d) {
+            d3.csv("data/drilldown_absolute.csv").then(function(d) {
 
                 var currentCountryData_array = [];
                 var Rrinc_max_array = [];
                 var Rrinc_min_array = [];
+                var Pop_array = [];
                 var years = [];
 
                 for (var i = 0; i < d.length; i++) {
@@ -175,6 +176,7 @@
 
                         Rrinc_max_array.push(d[i].Rrinc_max);
                         Rrinc_min_array.push(d[i].Rrinc_min);
+                        Pop_array.push(d[i].Pop);
 
                         years.push(d[i].Bin_Year);
                     }
@@ -185,17 +187,20 @@
 
                 var total_Rrinc_max = getMaxOfArray(Rrinc_max_array);
                 var total_Rrinc_min = getMaxOfArray(Rrinc_min_array);
+                var total_Pop = getMaxOfArray(Pop_array);
 
                 //console.log(total_Rrinc_max);
 
                 var data_max = Rrinc_max_array.map((value, index) => ({x: years[index], y: +value}));
                 var data_min = Rrinc_min_array.map((value, index) => ({x: years[index], y: +value}));
-                console.log('data_max', data_max);
-                console.log('data_min', data_min);
+                var data_pop = Pop_array.map((value, index) => ({x: years[index], y: +value}));
+                //console.log('data_max', data_max);
+                //console.log('data_min', data_min);
 
                 var x = d3.scaleBand().domain(data_max.map(p => p.x)).range([0, graph_width]);
                 var y = d3.scaleLinear().domain([0, total_Rrinc_max]).range([graph_height, 0]);
                 var h = d3.scaleLinear().domain([0, total_Rrinc_max]).range([0, graph_height]);
+                var p = d3.scaleLinear().domain([0, total_Pop]).range([graph_height, 0]);
 
                 d3.select('svg')
                     .attr("width", graph_width+margin*2)
@@ -227,54 +232,8 @@
                     .attr("width", barWidth)
                     .attr("height", d => h(d.y));
 
-                d3.select('svg').append('g')
-                    .attr('transform', "translate("+margin+","+margin+")")
-                    .call(d3.axisLeft(y));
 
-                d3.select('svg').append('g')
-                    .attr('transform', "translate("+margin+","+(graph_height+margin)+")")
-                    .call(d3.axisBottom(x));
-
-            });
-
-            d3.csv("data/drilldown_pop.csv").then(function(data) {
-
-                var currentCountryData_array = [];
-                var Pop_max_array = [];
-                var years = [];
-
-                data.forEach(function(d) {
-                    console.log(d);
-                });
-
-                for (var i = 0; i < data.length; i++) {
-                    
-                    row = data[i];
-                    //console.log(row.pop)
-                    var currentCountry = row["Country"];
-                    
-                    if (currentCountry == country) {
-                        currentCountryData_array.push(data[i]);
-                        Pop_max_array.push(data[i].Pop);
-                        years.push(data[i].Bin_Year);
-                    }
-                }
-
-                console.log(currentCountryData_array);
-                console.log(Pop_max_array);
-
-                var total_Pop_max = getMaxOfArray(Pop_max_array);
-
-                //console.log(total_Rrinc_max);
-
-                var data_pop = Pop_max_array.map((value, index) => ({x: years[index], y: +value}));
-                console.log('data_pop', data_pop);
-
-                var x = d3.scaleBand().domain(data_pop.map(p => p.x)).range([0, graph_width]);
-                var y = d3.scaleLinear().domain([0, total_Pop_max]).range([graph_height, 0]);
-                var h = d3.scaleLinear().domain([0, total_Pop_max]).range([0, graph_height]);
-
-                d3.select('svg')
+                    d3.select('svg')
                     .attr("width", graph_width+margin*2)
                     .attr("height",graph_height+margin*2)
                     .append("g")
@@ -288,7 +247,7 @@
                     .attr("stroke-width", 4)
                     .attr("d", d3.line()
                         .x(function(d) { return (x(d.x)+margin*2) })
-                        .y(function(d) { return (graph_height - h(d.y)) })
+                        .y(function(d) { return (graph_height - p(d.y)) })
                         );
 
                 d3.select('svg')
@@ -301,15 +260,22 @@
                     .data(data_pop)
                     .enter().append("circle")
                     .attr("cx", d => x(d.x)+margin*2)
-                    .attr("cy", d => graph_height - h(d.y))
+                    .attr("cy", d => graph_height - p(d.y))
                     .attr("r", 5)
-                    .style('fill', 'red')
-                    .attr("width", barWidth)
-                    .attr("height", d => h(d.y));
+                    .style('fill', 'red');
 
                 d3.select('svg').append('g')
                     .attr('transform', "translate("+(graph_width+margin)+","+margin+")")
-                    .call(d3.axisRight(y));
+                    .call(d3.axisRight(p));
+
+                d3.select('svg').append('g')
+                    .attr('transform', "translate("+margin+","+margin+")")
+                    .call(d3.axisLeft(y));
+
+                d3.select('svg').append('g')
+                    .attr('transform', "translate("+margin+","+(graph_height+margin)+")")
+                    .call(d3.axisBottom(x));
+
             });
         }
 
