--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -50,6 +49,10 @@
         <strong>Datasource:</strong> <a href="https://www.worldbank.org/en/research/brief/World-Panel-Income-Distribution" > https://www.worldbank.org/en/research/brief/World-Panel-Income-Distribution </a> <br>
         <strong>Source code:</strong> <a href="https://github.com/denisafanasev/cs498DataVisualization"> https://github.com/denisafanasev/cs498DataVisualization </a> <br>
         <strong>Web view:</strong> <a href="https://denisafanasev.github.io/cs498DataVisualization/"> https://denisafanasev.github.io/cs498DataVisualization/ </a> <br>
+    
+        <form action="data_visualization.html">
+            <input class="btn btn-dark" type="submit" value="Go to visualization" />
+        </form>
     </p>
 
 
