--- a/data_visualization.html
+++ b/data_visualization.html
@@ -223,7 +223,7 @@
                     .style("text-anchor", "middle")
                     .style("font-family", "Georgia, Times New Roman, Times, serif")
                     .attr("fill", "#999")
-                    .attr("font-size", "16")
+                    .attr("font-size", "13")
                     .text("Relative change in population");
 
                 d3.select('svg').append("text")
@@ -233,7 +233,7 @@
                     .style("text-anchor", "middle")
                     .style("font-family", "Georgia, Times New Roman, Times, serif")
                     .attr("fill", "#999")
-                    .attr("font-size", "16")
+                    .attr("font-size", "13")
                     .text("Relative change in income difference");
 
 
@@ -497,7 +497,7 @@
                     .style("text-anchor", "middle")
                     .style("font-family", "Georgia, Times New Roman, Times, serif")
                     .attr("fill", "#5D6971")
-                    .attr("font-size", "16")
+                    .attr("font-size", "13")
                     .text("Years");
 
                 d3.select('svg').append("text")
@@ -507,8 +507,8 @@
                     .style("text-anchor", "middle")
                     .style("font-family", "Georgia, Times New Roman, Times, serif")
                     .attr("fill", "#5D6971")
-                    .attr("font-size", "16")
-                    .text("Income");
+                    .attr("font-size", "13")
+                    .text("Income ($)");
 
                 d3.select('svg').append("text")
                     .attr("transform", "rotate(-90)")
@@ -517,7 +517,7 @@
                     .style("text-anchor", "middle")
                     .style("font-family", "Georgia, Times New Roman, Times, serif")
                     .attr("fill", "#5D6971")
-                    .attr("font-size", "16")
+                    .attr("font-size", "13")
                     .text("Population");
 
                 /**** Tooltips ****/
@@ -769,7 +769,7 @@
                     .style("text-anchor", "middle")
                     .style("font-family", "Georgia, Times New Roman, Times, serif")
                     .attr("fill", "#5D6971")
-                    .attr("font-size", "16")
+                    .attr("font-size", "13")
                     .text("Years");
 
                 d3.select('svg').append("text")
@@ -779,8 +779,8 @@
                     .style("text-anchor", "middle")
                     .style("font-family", "Georgia, Times New Roman, Times, serif")
                     .attr("fill", "#5D6971")
-                    .attr("font-size", "16")
-                    .text("Relative change to previous year");
+                    .attr("font-size", "13")
+                    .text("Relative change");
 
 
                 /**** Tooltips ****/
@@ -790,7 +790,6 @@
                     .style("position", "absolute")
                     .style("font-size", "12px")
                     .style("visibility", "hidden");
-                    
 
                 var mousemove = function(d) {
                     tooltip
